# siproxylin

./: .gitignore  .package-builder.sh  CHANGELOG.md  README.md  appimage.yml  build-appimage.sh  main.py  requirements.txt  siproxylin.appdata.xml  siproxylin.desktop  version.sh
.githooks/: generate-changelog.sh  pre-commit
.github/workflows/: release.yml
docs/: ADR.md  ARCHITECTURE.md  BUILD.md  OMEMO.md  VIDEO-VIEWER-PLAN.md  WINDOWS.md
docs/CALLS/: 1-PIPELINE-PLAN.md  2-SDP-PLAN.md  3-ICE-PLAN.md  4-GRPC-PLAN.md  5-STATS-PLAN.md  ANALYSIS-496562f0.md  AUDIO-DSP-IMPLEMENTATION.md  AUDIO-FLUSHING-ISSUE.md  AUDIO-SENDING-DIAGNOSIS.md  CALL-496562f0-ANALYSIS.md  GLIB-gRPC-THREAD-FIX.md  GRPC-THREADING-FINAL-VERDICT.md  GSTREAMER-THREADING.md  IMPLEMENTATION-START.md  JINGLE-REFACTOR-PLAN.md  PLAN.md  PROTO-IMPROVEMENTS.md  SESSION-1-SUMMARY.md  SESSION-LOG.md  START.md  WEBRTCBIN-RECVONLY-DEEP-DIVE.md  webrtcbin-reference.cpp
drunk_call_hook/: __init__.py  bridge.py
drunk_call_hook/proto/: call_pb2.py  call_pb2_grpc.py
drunk_call_hook/protocol/: __init__.py  jingle.py  jingle_sdp_converter.py
drunk_call_service/: CMakeLists.txt  Makefile  README.md  build.sh  devices.go  generate-python.sh  go.mod  go.sum  install-tools.sh  logger.go  lsan.supp  main.go  server.go  session.go
drunk_call_service/docs/: LOGGING-POLICY.md  THREAD-INFRASTRUCTURE-USAGE.md
drunk_call_service/proto/: call.pb.go  call.proto  call_grpc.pb.go
drunk_call_service/src/: MAIN-CPP-TEMPLATE.txt  call_service_impl.cpp  call_service_impl.h  device_enumerator.cpp  logger.cpp  logger.h  main.cpp  media_session.h  rtp_session.cpp  rtp_session.h  session_factory.cpp  session_manager.cpp  session_manager.h  thread_safe_queue.h  webrtc_session.cpp  webrtc_session.h
drunk_call_service/tests/: .gitignore  README.md  build_test.sh  test-grpc.sh  test_grpc_service.sh  test_ice_candidates.sh  test_webrtc_answer  test_webrtc_answer.c  test_webrtc_answer.c.bkp
drunk_call_service/tests/standalone/: .gitignore  COMMON-WARNINGS.md  Makefile  REFERENCE-COMPARISON.md  TEST_WEBRTC_README.md  run_test_simple.sh  run_webrtc_test.sh  test_audio_loopback  test_audio_loopback.cpp  test_device_enumeration  test_device_enumeration.cpp  test_logger  test_pipeline  test_pipeline.cpp  test_sdp_local  test_session_manager  test_stats  test_stats.cpp  test_step0_gstreamer_basic  test_step1_pipeline  test_step1_pipeline.cpp  test_step1b_audio_playback  test_step1b_audio_playback.cpp  test_step2_sdp_negotiation  test_step2_sdp_negotiation.cpp  test_step3_ice_connectivity  test_step3_ice_connectivity.cpp  test_step7_logger.cpp  test_step8_thread_safe_queue  test_step8_thread_safe_queue.cpp  test_step9_session_manager  test_step9_session_manager.cpp  test_thread_safe_queue  test_webrtc_answerer.cpp  test_webrtc_caller.cpp  test_webrtc_session
drunk_xmpp/: __init__.py  avatar.py  bookmarks.py  client.py  discovery.py  external_services.py  file_uploads.py  mam.py  message_extensions.py  messaging.py  omemo_devices.py  omemo_support.py  registration.py  xep_0428.py
drunk_xmpp/calls/: __init__.py  mixin.py
drunk_xmpp/slixmpp_patches/: __init__.py  cert_stdin_prevention.py  xep_0045_membership.py  xep_0077_deletion_stream_error.py  xep_0199_keepalive_fix.py  xep_0280_carbon_reactions.py  xep_0353_finish_message.py
drunk_xmpp/xep_0077/: __init__.py  registration.py
drunk_xmpp/xep_0158/: __init__.py
siproxylin/: version.py
siproxylin/core/: __init__.py  brewery.py  constants.py  contact_manager.py
siproxylin/db/: __init__.py  database.py  omemo_storage.py  schema.sql
siproxylin/gui/: __init__.py  about_dialog.py  account_dialog.py  call_log_dialog.py  call_window.py  contact_details_dialog.py  contact_dialog.py  contact_list.py  contacts_manager_dialog.py  join_room_dialog.py  log_viewer.py  main_window.py  muc_details_dialog.py  omemo_keys_dialog.py  (+2 more)
tests/: test-drunk-xmpp.py  test_jingle_sdp_converter.py  test_ssrc_handler.py
(+104 files in other folders)
